# BSCCompiler

./: .clang-format  .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  Dockerfile  Makefile  Readme.md  Readme_zh.md  diff  format.sh  main.sh  patch  report.txt
src/MapleEng/lmbc/: BUILD.gn
src/MapleEng/lmbc/include/: eng_shim.h  lmbc_eng.h  massert.h  mexpression.h  mfunction.h  mprimtype.h  mvalue.h
src/MapleEng/lmbc/src/: eng_shim.cpp  init.cpp  invoke_method.cpp  load_store.cpp  mfunction.cpp  mplsh.cpp
src/MapleEng/lmbc/test/: c2lmbc.sh
src/hir2mpl/: BUILD.gn  CMakeLists.txt  README.md
src/hir2mpl/common/include/: base64.h  basic_io.h  enhance_c_checker.h  fe_algorithm.h  fe_config_parallel.h  fe_configs.h  fe_diag_manager.h  fe_file_ops.h  fe_file_type.h  fe_function.h  fe_function_phase_result.h  fe_input.h  fe_input_helper.h  fe_java_string_manager.h  fe_macros.h  fe_manager.h  fe_options.h  fe_struct_elem_info.h  fe_timer.h  fe_timer_ns.h  fe_type_hierarchy.h  fe_type_manager.h  fe_utils.h  fe_utils_ast.h  fe_utils_java.h  feir_bb.h  feir_builder.h  feir_dfg.h  feir_node_kind.def  feir_scope.h  feir_stmt.h  feir_type.h  feir_type_helper.h  feir_type_infer.h  feir_var.h  feir_var_name.h  feir_var_reg.h  feir_var_type_scatter.h  general_bb.h  general_cfg.h  (+10 more)
src/hir2mpl/common/src/: base64.cpp  basic_io.cpp  enhance_c_checker.cpp  fe_config_parallel.cpp  fe_diag_manager.cpp  fe_file_type.cpp  fe_function.cpp  fe_function_phase_result.cpp  fe_input_helper.cpp  fe_java_string_manager.cpp  fe_options.cpp  fe_struct_elem_info.cpp  fe_type_hierarchy.cpp  fe_type_manager.cpp  fe_utils.cpp  fe_utils_java.cpp  feir_builder.cpp  feir_scope.cpp  feir_stmt.cpp  feir_type.cpp  feir_type_infer.cpp  feir_var.cpp  feir_var_name.cpp  feir_var_reg.cpp  feir_var_type_scatter.cpp  generic_attrs.cpp  hir2mpl.cpp  hir2mpl_compiler.cpp  hir2mpl_compiler_component.cpp  hir2mpl_env.cpp  hir2mpl_option.cpp  hir2mpl_options.cpp  simple_zip.cpp
src/hir2mpl/optimize/include/: feir_bb.h  feir_cfg.h  feir_dfg.h  feir_lower.h  ror.h
src/hir2mpl/optimize/src/: conditional_operator.cpp  feir_bb.cpp  feir_cfg.cpp  feir_dfg.cpp  feir_lower.cpp  ror.cpp
src/hir2mpl/test/: BUILD.gn  CMakeLists.txt  cov_check.sh  hir2mplUT_check.sh  ops_ut_check.sh
src/hir2mpl/test/common/: fe_function_process_schedular_test.cpp  fe_function_test.cpp  fe_struct_elem_info_test.cpp  feir_builder_test.cpp  feir_cfg_test.cpp  feir_lower_test.cpp  feir_stmt_dfg_test.cpp  feir_stmt_test.cpp  feir_test_base.cpp  feir_type_infer_test.cpp  feir_var_test.cpp  hir2mplUT.cpp  hir2mpl_ut.h  hir2mpl_ut_environment.h  hir2mpl_ut_options.cpp  hir2mpl_ut_options.h  hir2mpl_ut_regx.cpp  hir2mpl_ut_regx.h  hir2mpl_ut_regx_test.cpp  redirect_buffer.h
src/mapleall/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_be/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_be/mdgen/: gendef.py
src/mapleall/maple_driver/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_driver/defs/: default_options.def  phases.def
src/mapleall/maple_driver/include/: as_option.h  compiler.h  compiler_factory.h  compiler_selector.h  cpp2mpl_option.h  driver_option_common.h  driver_options.h  driver_runner.h  file_utils.h  ld_option.h  mpl_options.h  option_descriptor.h  option_parser.h  parse_spec.h  safe_exe.h  triple.h
src/mapleall/maple_driver/src/: as_compiler.cpp  clang_compiler.cpp  compiler.cpp  compiler_factory.cpp  compiler_selector.cpp  cpp2mpl_compiler.cpp  dex2mpl_compiler.cpp  driver_option_common.cpp  driver_options.cpp  driver_runner.cpp  file_utils.cpp  hided_options.cpp  ipa_compiler.cpp  jbc2mpl_compiler.cpp  ld_compiler.cpp  maple.cpp  maple_comb_compiler.cpp  maple_comb_compiler_wrapper.cpp  mpl_options.cpp  mplcg_compiler.cpp  option_parser.cpp  parse_spec.cpp  triple.cpp  unsupport_bool.cpp  unsupport_bool2.cpp  unsupport_bool3.cpp  unsupport_string.cpp  warning_option.cpp
src/mapleall/maple_ipa/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_ipa/include/: builtins.def  builtins_outside_C90.def  call_graph.h  func_desc.def  inline.h  ipa_clone.h  ipa_collect.h  ipa_gcovprofile.h  ipa_phase_manager.h  ipa_side_effect.h  prop_parameter_type.h  prop_return_null.h  region_identify.h  stmt_identify.h
src/mapleall/maple_ipa/src/: call_graph.cpp  clone.cpp  inline.cpp  ipa_clone.cpp  ipa_collect.cpp  ipa_gcovprofile.cpp  ipa_phase_manager.cpp  ipa_side_effect.cpp  module_phase_manager.cpp  prop_parameter_type.cpp  prop_return_null.cpp  region_identify.cpp
src/mapleall/maple_ir/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_ir/include/: all_attributes.def  all_pragmas.def  bin_mpl_export.h  bin_mpl_import.h  binary_op.def  cfg_primitive_types.h  cmpl.h  debug_info.h  dwarf.def  dwarf.h  func_desc.h  global_tables.h  intrinsic_c.def  intrinsic_dai.def  intrinsic_java.def  intrinsic_js.def  intrinsic_js_eng.def  intrinsic_op.h  intrinsic_vector.def  intrinsic_vector_new.def  intrinsics.def  intrinsics.h  ir_safe_cast_traits.def  java_eh_lower.h  keywords.def  lexer.h  metadata_layout.h  mir_builder.h  mir_const.h  mir_enum.h  mir_enumeration.h  mir_function.h  mir_lower.h  mir_module.h  mir_nodes.h  mir_parser.h  mir_pragma.h  mir_preg.h  mir_scope.h  mir_symbol.h  (+18 more)
src/mapleall/maple_ir/src/: driver.cpp  (+31 more)
src/mapleall/maple_me/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_pgo/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_phase/: BUILD.gn  CMakeLists.txt
src/mapleall/maple_san/: .gitignore  CMakeLists.txt
src/mapleall/maple_util/: BUILD.gn  CMakeLists.txt
src/mapleall/mempool/: BUILD.gn  CMakeLists.txt
src/mapleall/mpl2mpl/: BUILD.gn  CMakeLists.txt
src/mapleall/test/: BUILD.gn  CMakeLists.txt  cl_ut_test.cpp  float128_ut_test.cpp  int128_lexer.cpp  int128_val_test.cpp  int_val_test.cpp  list_scheduling_test.cpp  maple_string_test.cpp  peep_test.cpp  simple_bit_set_utest.cpp  stacktrace_test.cpp
src/mrt/: BUILD.gn  CMakeLists.txt
src/mrt/compiler-rt/: BUILD.gn  CMakeLists.txt
src/mrt/libcore-static-binding-jni/: CMakeLists.txt
src/mrt/maplert/: CMakeLists.txt
tools/gtest_lib/example/: CMakeLists.txt  test_example.cpp
(+13568 files in other folders)
